* gcc.dg/cpp/trad/xwin1.c: Remove, breaks testsuite (and I don't 	know how to make it work).
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@74567 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_3-branch/gcc/testsuite/ChangeLog
+++ b/gcc-3_3-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-12  Nathanael Nerode  <neroden@gcc.gnu.org>
+
+	* gcc.dg/cpp/trad/xwin1.c: Remove, breaks testsuite (and I don't
+	know how to make it work).
+
 2003-12-11  Eric Botcazou  <ebotcazou@libertysurf.fr>
 
 	Backport from mainline:
