.: 	* target.h (gcc_target.abi): Add cxx_builtin_type_mangling. 	* target-def.h (TARGET_ABI_CXX_BUILTIN_TYPE_MANGLING): New. 	(TARGET_ABI): Add new initializer. 	* doc/tm.texi (TARGET_ABI_CXX_BUILTIN_TYPE_MANGLING): Document. 	* config/ia64/ia64.c (hpux_ia64_builtin_type_mangling): Override 	long_double_node mangling. cp: 	* mangle.c (integer_type_codes): Remove. 	(builtin_type_mangling_table): New. 	(struct builtin_type_mangling_entry): New. 	(builtin_type_manglings): New. 	(htab_builtin_type_hash, htab_builtin_type_eq): New. 	(builtin_type_mangling_init): New. 	(write_java_integer_type_codes): Remove. 	(write_builtin_type): Reimplement to use hash table and target 	specific overriders.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@74577 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/csl-hpux-branch/gcc/ChangeLog
+++ b/csl-hpux-branch/gcc/ChangeLog
@@ -1,3 +1,12 @@
+2003-12-12  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* target.h (gcc_target.abi): Add cxx_builtin_type_mangling.
+	* target-def.h (TARGET_ABI_CXX_BUILTIN_TYPE_MANGLING): New.
+	(TARGET_ABI): Add new initializer.
+	* doc/tm.texi (TARGET_ABI_CXX_BUILTIN_TYPE_MANGLING): Document.
+	* config/ia64/ia64.c (hpux_ia64_builtin_type_mangling): Override
+	long_double_node mangling.
+
 2003-12-10  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* target.h (gcc_target.abi): Add cxx_dtor_in_charge_parm.
