--- a/csl-hpux-branch/gcc/cp/ChangeLog
+++ b/csl-hpux-branch/gcc/cp/ChangeLog
@@ -1,3 +1,15 @@
+2003-12-12  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* mangle.c (integer_type_codes): Remove.
+	(builtin_type_mangling_table): New.
+	(struct builtin_type_mangling_entry): New.
+	(builtin_type_manglings): New.
+	(htab_builtin_type_hash, htab_builtin_type_eq): New.
+	(builtin_type_mangling_init): New.
+	(write_java_integer_type_codes): Remove.
+	(write_builtin_type): Reimplement to use hash table and target
+	specific overriders.
+
 2003-12-10  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* class.c (build_clone): Use cxx_dtor_in_charge_parm_ to
