--- a/gcc-3_3-branch/gcc/testsuite/ChangeLog
+++ b/gcc-3_3-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-12  Roger Sayle  <roger@eyesopen.com>
+
+	PR optimization/13037
+	* g77.f-torture/execute/13037.f: New test case.
+
 2003-12-12  Jakub Jelinek  <jakub@redhat.com>
 
 	* g++.dg/eh/ia64-1.C: New test.
