* tree.h (DECL_NEWEST_DUPLICATE):  New macro. 	* tree.c (get_callee_fndecl):  Use DECL_NEWEST_DUPLICATE. 	* expr.c (expand_expr):  Likewise. 	* varasm.c (make_decl_rtl, assemble_variable):  Likewise. 	(merge_weak):  Don't call mark_weak on olddecl. 	* c-decl.c (pushdecl):  Call DECL_NEWEST_DUPLICATE on old decl.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@74613 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/compile-server-branch/gcc/ChangeLog
+++ b/compile-server-branch/gcc/ChangeLog
@@ -1,3 +1,12 @@
+2003-12-13  Per Bothner  <pbothner@apple.com>
+
+	* tree.h (DECL_NEWEST_DUPLICATE):  New macro.
+	* tree.c (get_callee_fndecl):  Use DECL_NEWEST_DUPLICATE.
+	* expr.c (expand_expr):  Likewise.
+	* varasm.c (make_decl_rtl, assemble_variable):  Likewise.
+	(merge_weak):  Don't call mark_weak on olddecl.
+	* c-decl.c (pushdecl):  Call DECL_NEWEST_DUPLICATE on old decl.
+
 2003-12-12  Per Bothner  <pbothner@apple.com>
 
 	* function.c (init_function_once):  Don't reset funcdef_no.
