* config/arm/arm-protos.h (arm_no_early_store_addr_dep, 	arm_no_early_alu_shift_dep, arm_no_early_mul_dep): Declare. 	* config/arm/arm.c (arm_no_early_store_addr_dep, 	arm_no_early_alu_shift_dep, arm_no_early_mul_dep): Define. 	* config/arm/arm1026ejs.md: Add load-store bypass. 	* config/arm/arm1136jfs.md (11_alu_op): Take 2 cycles. 	Add bypasses between instructions.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@74631 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/csl-arm-branch/gcc/ChangeLog
+++ b/csl-arm-branch/gcc/ChangeLog
@@ -1,3 +1,13 @@
+2003-12-15  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* config/arm/arm-protos.h (arm_no_early_store_addr_dep,
+	arm_no_early_alu_shift_dep, arm_no_early_mul_dep): Declare.
+	* config/arm/arm.c (arm_no_early_store_addr_dep,
+	arm_no_early_alu_shift_dep, arm_no_early_mul_dep): Define.
+	* config/arm/arm1026ejs.md: Add load-store bypass.
+	* config/arm/arm1136jfs.md (11_alu_op): Take 2 cycles.
+	Add bypasses between instructions.
+
 2003-12-10  Paul Brook  <paul@codesourcery.com>
 
 	* config/arm/arm.c (arm_fpu_model): New variable.
