* decl.c (setup_globals):  ANSI-fy function header. 	* lex.c (lang_clear_identifier):  Likewise. 	* name-lookup.c (lookup_using_namespace_one):  Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@74639 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/compile-server-branch/gcc/cp/ChangeLog
+++ b/compile-server-branch/gcc/cp/ChangeLog
@@ -1,3 +1,9 @@
+2003-12-15  Per Bothner  <pbothner@apple.com>
+
+	* decl.c (setup_globals):  ANSI-fy function header.
+	* lex.c (lang_clear_identifier):  Likewise.
+	* name-lookup.c (lookup_using_namespace_one):  Likewise.
+
 2003-10-29  Mike Stump  <mrs@apple.com>
 
 	* lang-specs.h: Use the server for PCH compiles.
