--- a/compile-server-branch/gcc/ChangeLog
+++ b/compile-server-branch/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-15  Per Bothner  <pbothner@apple.com>
+
+	* c-decl.c (lang_clear_identifier):  Clear TREE_SYMBOL_REFERENCED too.
+
 2003-12-13  Per Bothner  <pbothner@apple.com>
 
 	* tree.h (DECL_NEWEST_DUPLICATE):  New macro.
