--- a/gcc-3_3-branch/gcc/ChangeLog
+++ b/gcc-3_3-branch/gcc/ChangeLog
@@ -1,3 +1,17 @@
+2003-12-15  Kazu Hirata  <kazu@cs.umass.edu>
+
+	PR target/13122
+	* config/h8300/h8300.md (pushqi1_h8300hs_normal): New.
+	(pushqi1): Call gen_pushqi1_h8300hs_normal in normal mode.
+	(pushhi1_h8300hs_normal): New.
+	(pushhi1): Call gen_pushqi1_h8300hs_normal in normal mode.
+
+	* config/h8300/h8300.h (LINK_SPEC): Support normal mode.
+	* config/h8300/h8300.c (asm_file_start): Correctly output
+	an architecture directive.
+	* config/h8300/lib1funcs.asm: Correctly specify an
+	architecture directive.
+
 2003-12-12  Roger Sayle  <roger@eyesopen.com>
 
 	PR optimization/13037
