* altivec.h (vec_cmple, vec_all_numeric): Fix typo.       * testsuite/gcc.dg/altivec-10.c: Test for above.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@74680 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_3-branch/gcc/testsuite/ChangeLog
+++ b/gcc-3_3-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-16  Hartmut Penner  <hpenner@de.ibm.com>
+
+	* testsuite/gcc.dg/altivec-10.c: Test vec_cmple and vec_all_numeric.
+
 2003-12-12  Roger Sayle  <roger@eyesopen.com>
 
 	PR optimization/13037
