--- a/gcc-3_3-branch/gcc/ChangeLog
+++ b/gcc-3_3-branch/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-16  Hartmut Penner  <hpenner@de.ibm.com>
+
+	* altivec.h (vec_cmple, vec_all_numeric): Fix typo.
+	* testsuite/gcc.dg/altivec-10.c: Test for above.
+	
 2003-12-15  Kazu Hirata  <kazu@cs.umass.edu>
 
 	PR target/13122
