--- a/gcc-3_3-branch/gcc/config/s390/s390.md
+++ b/gcc-3_3-branch/gcc/config/s390/s390.md
@@ -1952,10 +1952,11 @@
    (use (match_dup 2))
    (use (match_dup 3))]
   "TARGET_64BIT"
-  "clcl\\t%0,%1"
-  [(set_attr "op_type" "RR")
+  "clcle\\t%0,%1,0\;jo\\t.-4"
+  [(set_attr "op_type" "NN")
    (set_attr "atype"   "mem")
-   (set_attr "type"    "vs")])
+   (set_attr "type"    "vs")
+   (set_attr "length"  "8")])
 
 (define_insn "cmpstr_long_31"
   [(clobber (match_operand:DI 0 "register_operand" "=d"))
@@ -1966,10 +1967,11 @@
    (use (match_dup 2))
    (use (match_dup 3))]
   "!TARGET_64BIT"
-  "clcl\\t%0,%1"
-  [(set_attr "op_type" "RR")
+  "clcle\\t%0,%1,0\;jo\\t.-4"
+  [(set_attr "op_type" "NN")
    (set_attr "atype"   "mem")
-   (set_attr "type"    "vs")])
+   (set_attr "type"    "vs")
+   (set_attr "length"  "8")])
 
 ; Convert condition code to integer in range (-1, 0, 1)
 
