PR c++/13262 	* pt.c (instantiate_decl): Wrap push_nested_class and 	pop_nested_class around cp_finish_decl call for static member 	variable.
	* g++.dg/template/access13.C: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@74782 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_3-branch/gcc/testsuite/ChangeLog
+++ b/gcc-3_3-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-18  Kriang Lerdsuwanakij  <lerdsuwa@users.sourceforge.net>
+
+	PR c++/13262
+	* g++.dg/template/access13.C: New test.
+
 2003-12-16  Zack Weinberg  <zack@codesourcery.com>
 
 	* gcc.c-torture/compile/981223-1.x: Add -mb-step to command line
