--- a/tree-ssa-20020619-branch/gcc/cp/ChangeLog
+++ b/tree-ssa-20020619-branch/gcc/cp/ChangeLog
@@ -1,3 +1,9 @@
+2003-12-17  Jason Merrill  <jason@redhat.com>
+
+	PR c++/12253
+	* init.c (build_vec_init): Initialization of an element from
+	an initializer list is also a full-expression.
+
 2003-11-23  Kriang Lerdsuwanakij  <lerdsuwa@users.sourceforge.net>
 
 	PR c++/12924
