--- a/gcc-3_3-rhl-branch/gcc/f/ChangeLog
+++ b/gcc-3_3-rhl-branch/gcc/f/ChangeLog
@@ -1,3 +1,11 @@
+2003-12-05  Toon Moene  <toon@moene.indiv.nluug.nl>
+
+	PR fortran/12633
+	Revert 2002-05-09  Hassan Aurag  <aurag@cae.com>
+
+		* expr.c (ffeexpr_reduced_ugly2log_): Allow logicals-as-integers
+		under -fugly-logint as arguments of .and., .or., .xor.
+
 2003-10-30  Jakub Jelinek  <jakub@redhat.com>
 
 	* com.c (ffecom_sym_transform_): Set tree type of offset
