--- a/gcc-3_3-branch/gcc/cp/ChangeLog
+++ b/gcc-3_3-branch/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-19  Jason Merrill  <jason@redhat.com>
+
+	PR c++/13371
+	* typeck.c (build_modify_expr): Stabilize lhs if we're narrowing.
+
 2003-12-18  Jason Merrill  <jason@redhat.com>
 
 	PR c++/12253
