* trans-expr.c (gfc_conv_expr_op): Fold the result expression. 	* trans.c (gfc_add_modify_expr, gfc_add_expr_to_block): Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@74861 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/tree-ssa-20020619-branch/gcc/fortran/ChangeLog
+++ b/tree-ssa-20020619-branch/gcc/fortran/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-20  Steven Bosscher  <stevenb@suse.de>
+
+	* trans-expr.c (gfc_conv_expr_op): Fold the result expression.
+	* trans.c (gfc_add_modify_expr, gfc_add_expr_to_block): Likewise.
+
 2003-12-12  Huang Chun <chunhuang73@hotmail.com>
 
 	* primary.c (match_substring): Fix substring bug for start point
