--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-21  Michael Koch  <konqueror@gmx.de>
+
+	* gnu/java/net/PlainDatagramSocketImpl.java
+	(mcastGrp): Added documentation.
+
 2003-12-20  Michael Koch  <konqueror@gmx.de>
 
 	* gnu/java/net/protocol/jar/Connection.java
