--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,5 +1,19 @@
 2003-12-21  Michael Koch  <konqueror@gmx.de>
 
+	* javax/print/attribute/DateTimeSyntax.java,
+	javax/print/attribute/DocAttribute.java,
+	javax/print/attribute/DocAttributeSet.java,
+	javax/print/attribute/IntegerSyntax.java,
+	javax/print/attribute/ResolutionSyntax.java,
+	javax/print/attribute/Size2DSyntax.java,
+	javax/print/attribute/TextSyntax.java,
+	javax/print/attribute/URISyntax.java,
+	javax/print/attribute/UnmodifiableSetException.java: New files.
+	* Makefile.am (ordinary_java_source_files): Added new files.
+	* Makefile.in: Regenerated.
+
+2003-12-21  Michael Koch  <konqueror@gmx.de>
+
 	* gnu/java/net/PlainDatagramSocketImpl.java
 	(mcastGrp): Added documentation.
 
