2003-12-21  Michael Koch  <konqueror@gmx.de>
	* javax/print/attribute/EnumSyntax.java,
	javax/print/attribute/SetOfIntegerSyntax.java: New files.
	* Makefile.am (ordinary_java_source_files):
	Added javax/print/attribute/EnumSyntax.java
	and javax/print/attribute/SetOfIntegerSyntax.java.
	* Makefile.in: Regenerated.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@74908 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,5 +1,14 @@
 2003-12-21  Michael Koch  <konqueror@gmx.de>
 
+	* javax/print/attribute/EnumSyntax.java,
+	javax/print/attribute/SetOfIntegerSyntax.java: New files.
+	* Makefile.am (ordinary_java_source_files):
+	Added javax/print/attribute/EnumSyntax.java
+	and javax/print/attribute/SetOfIntegerSyntax.java.
+	* Makefile.in: Regenerated.
+
+2003-12-21  Michael Koch  <konqueror@gmx.de>
+
 	* javax/print/attribute/PrintJobAttribute.java,
 	javax/print/attribute/PrintJobAttributeSet.java,
 	javax/print/attribute/PrintRequestAttribute.java,
