PR middle-end/13400 	* ifcvt.c (noce_process_if_block): Disable unconditional write 	optimizations if we could introduce a store to trapping memory 	that wasn't present previously.
	* gcc.c-torture/execute/20031215-1.c: New test case.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@74910 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_3-branch/gcc/ChangeLog
+++ b/gcc-3_3-branch/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2003-12-21  Roger Sayle  <roger@eyesopen.com>
+
+	PR middle-end/13400
+	* ifcvt.c (noce_process_if_block): Disable unconditional write
+	optimizations if we could introduce a store to trapping memory
+	that wasn't present previously.
+
 2003-12-20  Roger Sayle  <roger@eyesopen.com>
 
 	PR optimization/13031
