--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,5 +1,16 @@
 2003-12-21  Michael Koch  <konqueror@gmx.de>
 
+	* javax/print/attribute/AttributeSetUtilities.java,
+	javax/print/attribute/HashAttributeSet.java,
+	javax/print/attribute/HashDocAttributeSet.java,
+	javax/print/attribute/HashPrintJobAttributeSet.java,
+	javax/print/attribute/HashPrintRequestAttributeSet.java,
+	javax/print/attribute/HashPrintServiceAttributeSet.java: New files.
+	* Makefile.am (ordinary_java_source_files): Added new files.
+	* Makefile.in: Regenerated.
+
+2003-12-21  Michael Koch  <konqueror@gmx.de>
+
 	* javax/print/attribute/EnumSyntax.java,
 	javax/print/attribute/SetOfIntegerSyntax.java: New files.
 	* Makefile.am (ordinary_java_source_files):
