--- a/gcc-3_3-branch/gcc/ChangeLog
+++ b/gcc-3_3-branch/gcc/ChangeLog
@@ -1,3 +1,12 @@
+2003-12-21  Gabriel Dos Reis <gdr@integrable-solutions.net>	
+
+    Backport from mainline:	
+    2003-10-31  Richard Earnshaw  <rearnsha@arm.com>
+
+	    PR target/11271
+	    * reload.c (find_reloads_address): Handle any register in
+	    (PLUS (PLUS (REG) (REG)) (CONST_INT).
+
 2003-12-21  Roger Sayle  <roger@eyesopen.com>
 
 	PR middle-end/13400
