--- a/gcc-3_3-branch/gcc/ChangeLog
+++ b/gcc-3_3-branch/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-21  Roger Sayle  <roger@eyesopen.com>
+
+	* config/ia64/hpux.h (TARGET_OS_CPP_BUILTINS): Define _ILP32
+	when compiling in ILP32 mode.
+
 2003-12-21  Gabriel Dos Reis <gdr@integrable-solutions.net>	
 
     Backport from mainline:	
