PR target/11271         * reload.c: Revert last backport from mainline.  It breaks         s390.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@74924 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_3-branch/gcc/ChangeLog
+++ b/gcc-3_3-branch/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-22  Gabriel Dos Reis <gdr@integrable-solutions.net>
+
+        PR target/11271
+	* reload.c: Revert last backport from mainline.  It breaks s390. 
+
 2003-12-21  Roger Sayle  <roger@eyesopen.com>
 
 	* config/ia64/hpux.h (TARGET_OS_CPP_BUILTINS): Define _ILP32
