--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-21  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/11554
+	* init.c (sort_mem_initializers): Add warning.
+
 2003-12-21  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* call.c: Fix comment formatting.
