--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,5 +1,15 @@
 2003-12-21  Mark Mitchell  <mark@codesourcery.com>
 
+	* cp-tree.h (cp_tree_index): Remove CPTI_RECORD_TYPE,
+	CPTI_UNION_TYPE, CPTI_ENUM_TYPE.
+	(record_type_node): Remove.
+	(union_type_node): Likewise.
+	(enum_type_node): Likewise.
+	* decl.c: Remove mention of above tree nodes in comment.
+	* lex.c (cxx_init): Do not assign to record_type_node,
+	union_type_node, or enum_type_node.  Simplify handling of
+	class_type_node.
+
 	PR c++/11554
 	* init.c (sort_mem_initializers): Add warning.
 
