--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,8 @@
 2003-12-21  Mark Mitchell  <mark@codesourcery.com>
 
+	PR c++/13438
+	* g++.dg/parse/error8.C: New test.
+
 	PR c++/11554
 	* testsuite/g++.dg/warn/ctor-init-1.C: New test.
 
