--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-22  Andrew Pinski  <pinskia@physics.uc.edu>
+
+	PR c/9163
+	* gcc.dg/20031222-1.c: New test.
+
 2003-12-21  Mark Mitchell  <mark@codesourcery.com>
 
 	PR c++/13438
