--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,9 @@
+2003-12-22  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/12479
+	* parser.c (cp_parser_declaration_seq_opt): Only issue "extra ;"
+	pedwarn when not in a system header.
+
 2003-12-21  Mark Mitchell  <mark@codesourcery.com>
 
 	* cp-tree.h (cp_tree_index): Remove CPTI_RECORD_TYPE,
