--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,9 @@
+2003-12-22  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/12479
+	* g++.dg/parse/semicolon1.C: New test.
+	* g++.dg/parse/semicolon1.h: Likewise.
+
 2003-12-22  Andrew Pinski  <pinskia@physics.uc.edu>
 
 	PR c/9163
